voting-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-worker
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-worker
  template:
    metadata:
      labels:
        app: voting-worker 
    spec:
      containers:
      - name: voting-worker
        image: 537124957197.dkr.ecr.ap-south-1.amazonaws.com/vote/worker:latest
        ports:
          - containerPort: 5432
          - containerPort: 6379
        resources:
          limits:
            cpu: "500m"    # 0.5 CPU cores
            memory: "256Mi" # 256 Megabytes
          requests:
            cpu: "100m"    # 0.1 CPU cores
            memory: "128Mi" # 128 Megabytes
