voting-result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-result
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-result 
  template:
    metadata:
      labels:
        app: voting-result
    spec:
      containers:
      - name: voting-result
        image: 537124957197.dkr.ecr.ap-south-1.amazonaws.com/vote/result:latest
        ports:
          - containerPort: 8081
        resources:
          limits:
            cpu: "500m"    # 0.5 CPU cores
            memory: "256Mi" # 256 Megabytes
          requests:
            cpu: "100m"    # 0.1 CPU cores
            memory: "128Mi" # 128 Megabytes
---
# Result service 

apiVersion: v1
kind: Service
metadata:
  name: voting-result-svc
  namespace: vote
spec:
  selector:
    app: voting-result
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
