voting-vote-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-vote
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-vote
  template:
    metadata:
      labels:
        app: voting-vote
    spec:
      containers:
      - name: voting-vote
        image: luffyxxsenpai/voting-vote:v1
        ports:
          - containerPort: 8080
---
# vote service 

apiVersion: v1
kind: Service
metadata:
  name: voting-vote-svc
  namespace: vote
spec:
  selector:
    app: voting-vote
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
